--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.8</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 
     <build>
